# champi-signals

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml  release.yml
api/bridges/: index.html
api/enums/: index.html
api/managers/: index.html
api/processors/: index.html
changelog/: index.html
docs/: changelog.md  index.md  integration.md
docs/api/: bridges.md  enums.md  managers.md  processors.md
docs/phases/: phase-0-foundation.md  phase-1-ipc-bridge.md  phase-2-enhanced-processor.md  phase-3-enums-and-docs.md
docs/specs/: backend.md  frontend.md
examples/: README.md  async_example.py  basic_example.py  custom_enums_example.py  event_processor_example.py
integration/: index.html
phases/: milestones.json
phases/phase-0-foundation/: index.html
phases/phase-1-ipc-bridge/: index.html
phases/phase-2-enhanced-processor/: index.html
phases/phase-3-enums-and-docs/: index.html
search/: search_index.json
specs/backend/: index.html
specs/frontend/: index.html
src/champi_signals/: __init__.py  bridges.py  enums.py  managers.py  processors.py
tests/: __init__.py  conftest.py  test_bridges.py  test_enums.py  test_exports.py  test_managers.py  test_processors.py
